# tinyDEM

./: .gitignore  Cargo.toml  README.md
src/: agent.rs  helpers.rs  main.rs
src/agent/: snmpwalk.rs
src/helpers/: db.rs  middleware.rs  routes.rs  user.rs
templates/: authed.html  dashboard.html  index.html  login.html  register.html
