[package]
name = "tiny_dem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
actix-identity = "0.5.2"
actix-session = { version = "0.7.2", features = ["cookie-session"] }
r2d2 = "0.8.10"
r2d2_sqlite = "0.21.0"
handlebars = { version = "4.2.1", features = ["dir_source"] }
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
rusqlite = { version = "0.28.0", features = ["bundled"] }
bcrypt = "0.14"
jsonwebtoken = "8.2.0"
chrono = "0.4.23"
snmp = "0.2.2"
log = "0.4.0"
env_logger = "0.9.0"